# nbv_underwater

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: logger.launch  nbv_planner.launch
scripts/: rough_nbv_planner.py
src/nbv_underwater/: bot.py  planner.py
